--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     implementation 'org.postgresql:postgresql'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.hibernate:hibernate-core'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
