--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,27 @@
 # ===============================
+# ENCRYPTION
+# ===============================
+
+jasypt.encryptor.password=${env.JASYPT_PASSWORD}
+jasypt.encryptor.iv-generator-classname=org.jasypt.iv.NoIvGenerator
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
+
+# ===============================
 # DATABASE CONNECTION
 # ===============================
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=H110mprovd
+spring.datasource.driver-class-name=${env.DATASOURCE_DRIVER}
+spring.datasource.url=${env.DATASOURCE_URL}
+spring.datasource.username=${env.DATASOURCE_USERNAME}
+spring.datasource.password=${env.DATASOURCE_PASSWORD}
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=${env.SHOW_SQL}
+spring.jpa.hibernate.ddl-auto=${env.HIBERNATE_DDL_AUTO}
+spring.jpa.properties.hibernate.dialect=${env.HIBERNATE_DIALECT}
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
