--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.data.rest.base-path=/api
+
 # ===============================
 # ENCRYPTION
 # ===============================
@@ -22,9 +24,6 @@ spring.datasource.password=${env.DATASOURCE_PASSWORD}
 spring.jpa.show-sql=${env.SHOW_SQL}
 spring.jpa.hibernate.ddl-auto=${env.HIBERNATE_DDL_AUTO}
 spring.jpa.properties.hibernate.dialect=${env.HIBERNATE_DIALECT}
-
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
 
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=DEBUG
