--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.hibernate:hibernate-core'
+    implementation 'org.hibernate.validator:hibernate-validator'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
     implementation 'me.paulschwarz:spring-dotenv:2.3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
