--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ dependencies {
     implementation 'org.hibernate.validator:hibernate-validator'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
     implementation 'me.paulschwarz:spring-dotenv:2.3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
